[gd_scene load_steps=13 format=3 uid="uid://db8kmed63v1qa"]

[ext_resource type="Script" path="res://Assets/Scripts/card.gd" id="1_wnf6q"]
[ext_resource type="Texture2D" uid="uid://7ou2nkhneqvl" path="res://Assets/Graphics/Export/MANA_POINT.png" id="2_0afud"]
[ext_resource type="Script" path="res://Assets/Scripts/Classes/cardData.gd" id="2_go770"]
[ext_resource type="FontFile" uid="uid://cmtjmmt0xb1l5" path="res://Assets/Graphics/Font/ThaleahFat.ttf" id="2_s7wnn"]
[ext_resource type="Texture2D" uid="uid://bukgcmswnvo1i" path="res://Assets/Graphics/Export/HEALTH.png" id="4_8oket"]
[ext_resource type="Texture2D" uid="uid://b6y87c66ci18q" path="res://Assets/Graphics/Export/DEFFENSE.png" id="5_3u4vg"]
[ext_resource type="Texture2D" uid="uid://esdtipib6mdj" path="res://Assets/Graphics/Export/ATTACK.png" id="6_no6vg"]
[ext_resource type="Texture2D" uid="uid://bs6vk81sxfgo5" path="res://Assets/Graphics/Export/CARD_FG_BG.png" id="7_sxw7x"]
[ext_resource type="Texture2D" uid="uid://tbf8b2xr22de" path="res://Assets/Graphics/Export/CARD_FG.png" id="8_c46ei"]
[ext_resource type="Texture2D" uid="uid://cxbg0yn6nhmfy" path="res://Assets/Graphics/Export/CARD_BG.png" id="9_k2dkd"]
[ext_resource type="Texture2D" uid="uid://gm32rlj5oumd" path="res://Assets/Graphics/Export/CARD_BG_TEXT.png" id="10_tgl6e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0oiwr"]
size = Vector2(240, 320)

[node name="card" type="Node2D"]
script = ExtResource("1_wnf6q")

[node name="cardTrans" type="Node2D" parent="."]
script = ExtResource("2_go770")

[node name="NameLabel" type="Label" parent="cardTrans"]
texture_filter = 1
custom_minimum_size = Vector2(400, 60)
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -209.0
offset_right = 200.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(200, 30)
size_flags_horizontal = 4
theme_override_constants/line_spacing = -4
theme_override_fonts/font = ExtResource("2_s7wnn")
theme_override_font_sizes/font_size = 42
text = "Saint Mravenec 3000"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
max_lines_visible = 2
visible_characters_behavior = 2
metadata/_edit_use_anchors_ = true

[node name="CardStats" type="MarginContainer" parent="cardTrans"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -160.0
offset_right = 179.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="LeftContainer" type="HBoxContainer" parent="cardTrans/CardStats"]
layout_mode = 2
alignment = 2

[node name="GridContainer" type="GridContainer" parent="cardTrans/CardStats/LeftContainer"]
custom_minimum_size = Vector2(30, 30)
layout_direction = 2
layout_mode = 2

[node name="ManaSprite" type="TextureRect" parent="cardTrans/CardStats/LeftContainer/GridContainer"]
modulate = Color(0.3, 1, 1, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_0afud")

[node name="ManaLabel" type="Label" parent="cardTrans/CardStats/LeftContainer/GridContainer/ManaSprite"]
texture_filter = 1
layout_mode = 2
offset_left = 48.0
offset_top = -1.5
offset_right = 96.0
offset_bottom = 42.5
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_s7wnn")
theme_override_font_sizes/font_size = 48
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
visible_characters = 2
visible_characters_behavior = 4

[node name="HealthSprite" type="TextureRect" parent="cardTrans/CardStats/LeftContainer/GridContainer"]
modulate = Color(1, 0.3, 0.3, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("4_8oket")

[node name="HealthLabel" type="Label" parent="cardTrans/CardStats/LeftContainer/GridContainer/HealthSprite"]
texture_filter = 1
layout_mode = 0
offset_left = 48.0
offset_top = -1.5
offset_right = 96.0
offset_bottom = 42.5
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_s7wnn")
theme_override_font_sizes/font_size = 48
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
visible_characters = 2
visible_characters_behavior = 4

[node name="DeffenseSprite" type="TextureRect" parent="cardTrans/CardStats/LeftContainer/GridContainer"]
visible = false
modulate = Color(0.79, 1, 0.3, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("5_3u4vg")

[node name="DeffenseLabel" type="Label" parent="cardTrans/CardStats/LeftContainer/GridContainer/DeffenseSprite"]
texture_filter = 1
layout_direction = 1
layout_mode = 0
offset_left = 48.0
offset_top = -1.5
offset_right = 96.0
offset_bottom = 42.5
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_s7wnn")
theme_override_font_sizes/font_size = 48
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
visible_characters = 2
visible_characters_behavior = 4

[node name="AttackSprite" type="TextureRect" parent="cardTrans/CardStats/LeftContainer/GridContainer"]
modulate = Color(1, 0.848333, 0.3, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6_no6vg")

[node name="AttackLabel" type="Label" parent="cardTrans/CardStats/LeftContainer/GridContainer/AttackSprite"]
texture_filter = 1
layout_direction = 1
layout_mode = 2
offset_left = 48.0
offset_top = -1.5
offset_right = 96.0
offset_bottom = 42.5
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_s7wnn")
theme_override_font_sizes/font_size = 48
text = "99"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
visible_characters = 2
visible_characters_behavior = 4

[node name="RightContainer" type="HBoxContainer" parent="cardTrans/CardStats"]
visible = false
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="cardTrans/CardStats/RightContainer"]
custom_minimum_size = Vector2(30, 30)
layout_direction = 2
layout_mode = 2

[node name="ManaSprite" type="TextureRect" parent="cardTrans/CardStats/RightContainer/GridContainer"]
modulate = Color(0.3, 1, 1, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("2_0afud")

[node name="HealthSprite" type="TextureRect" parent="cardTrans/CardStats/RightContainer/GridContainer"]
modulate = Color(1, 0.3, 0.3, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("4_8oket")

[node name="DeffenseSprite" type="TextureRect" parent="cardTrans/CardStats/RightContainer/GridContainer"]
visible = false
modulate = Color(0.79, 1, 0.3, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("5_3u4vg")

[node name="AttackSprite" type="TextureRect" parent="cardTrans/CardStats/RightContainer/GridContainer"]
modulate = Color(1, 0.848333, 0.3, 1)
texture_filter = 1
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
texture = ExtResource("6_no6vg")

[node name="CardFG" type="Node2D" parent="cardTrans"]

[node name="CardFgBg" type="Sprite2D" parent="cardTrans/CardFG"]
scale = Vector2(10, 10)
texture = ExtResource("7_sxw7x")

[node name="FG" type="Sprite2D" parent="cardTrans/CardFG"]
modulate = Color(0.870588, 0.541176, 0.113725, 1)
texture_filter = 1
scale = Vector2(10, 10)
texture = ExtResource("8_c46ei")

[node name="CardBG" type="Node2D" parent="cardTrans"]

[node name="BG" type="Sprite2D" parent="cardTrans/CardBG"]
visible = false
modulate = Color(0.870588, 0.541176, 0.113725, 1)
texture_filter = 1
scale = Vector2(10, 10)
texture = ExtResource("9_k2dkd")

[node name="CardBgText" type="Sprite2D" parent="cardTrans/CardBG/BG"]
texture = ExtResource("10_tgl6e")

[node name="Area2D" type="Area2D" parent="." groups=["card"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_0oiwr")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
